--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "tailwindcss": "^3.4.17",
     "theme-change": "^2.5.0",
     "vite": "^5.4.11"
+  },
+  "dependencies": {
+    "react-modal-image": "^2.6.0"
   }
 }
