--- a/composer.json
+++ b/composer.json
@@ -9,18 +9,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.3.0",
+        "barryvdh/laravel-dompdf": "^2.2",
         "dyrynda/laravel-cascade-soft-deletes": "^4.4.1",
         "firebase/php-jwt": "^6.10.2",
         "guzzlehttp/guzzle": "^7.9.2",
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^11.37.0",
         "laravel/prompts": "^0.1.25",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.10.0",
         "rap2hpoutre/fast-excel": "^5.5",
         "react/async": "^4.3",
+        "revolution/laravel-google-sheets": "^7.0",
         "spatie/async": "^1.6.2",
-        "tightenco/ziggy": "^1.8.2",
-        "barryvdh/laravel-dompdf": "^2.2"
+        "tightenco/ziggy": "^1.8.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^2.0.0",
